# wt-ky-kachraz-kz-mz-abc-2

./: .gitignore  README.md  time.txt
WX/: README.MD
WX/STU/: dokack.sh
WX/STU/prac/p1/: achor.txt
WX/STU/prac/s7l2/src/utz/: mod.rs
WX/STU/prac/tut/: README.MD
WX/STU/prac/tut/t1/deployz/: d3.txt
WX/STU/tasks/t2/src/: shapes.rs
WX/STU/tasks/t2ai/: README.MD
WX/STU/tasks/t5/: panty.tar.xz
WX/STU/tasks/t5/t51/: mynotes.md  puzy.sh
WX/STU/tasks/t5/t51/WRITE/: tests.txt
WX/STU/tasks/t5/t51/anchor_project/message_board/programs/message_board/: Cargo.toml
WX/STU/tasks/t5/t51/anchor_project/message_board/programs/message_board/src/: lib.rs
WX/STU/tasks/t5/t51/anchor_project/msg_brd/programs/msg_brd/programs/message_board/: Cargo.toml
WX/STU/tasks/t5/t51/frontend/: idl.json
WX/STU/tasks/t5/t52/anchor_project/fortco/programs/fortco/: Cargo.toml
WX/STU/tasks/t5/t52/anchor_project/fortco/programs/fortco/src/: lib.rs
WX/STU/tasks/t5/t52/front-end/: package.json
WX/WOX/: README.MD
WX/tezt/: README.MD
WX/tezt/tr1/: RULES.TXT
ky-kachraz-kz-mz-abc-1/: sc.txt  time.txt
ky-kachraz-kz-mz-abc-1/WX/: cari.sh
ky-kachraz-kz-mz-abc-1/WX/STU/: dokack.sh  solz.sh
ky-kachraz-kz-mz-abc-1/WX/STU/prac/p1/: sc.txt  sol.sh
ky-kachraz-kz-mz-abc-1/WX/STU/prac/p1/p1/: Anchor.toml
ky-kachraz-kz-mz-abc-1/WX/STU/tasks/: README.MD
ky-kachraz-kz-mz-abc-1/WX/STU/tasks/t3/: RULES.TXT  panty.tar.xz
ky-kachraz-kz-mz-abc-1/WX/STU/tasks/t4/: panty.tar.xz
ky-kachraz-kz-mz-abc-1/WX/tezt/tr1/: PULL_REQUEST.md
ky-kachraz-kz-mz-abc-1/kz/: lix.fish  vscodedev.txt
ky-kachraz-kz-mz-abc-1/kz-mz-abc-1/STU/: README.MD
ky-kachraz-kz-mz-abc-1/kz-mz-abc-1/WOX/: utilz.sh
ky-kachraz-kz-mz-abc-1/kz-mz-abc-1/WOX/.opencode/: opencode.db-shm
ky-kachraz-kz-mz-abc-1/kz-mz-abc-1/WOX/tez/: README.MD
old/: README.md  g  kronz.sh
old/WX/: aiza.sh
old/WX/STU/: README.MD
old/WX/STU/prac/: README.MD
old/WX/STU/prac/s7l2/: BloatReport.txt  Cargo.toml  mkr.sh  runz.sh
old/WX/STU/prac/s7l2/src/: main.rs
old/WX/STU/prac/s7l2/src/wo1/: w3.rs  w4.rs
old/WX/STU/prac/tut/: anch.sh  cmz.sh
old/WX/STU/tasks/t2/: README.MD
old/WX/WOX/: utilz.sh
old/buildz/: README.MD
old/kz-mz-abc-1/: README.md  time.txt
old/kz-mz-abc-1/STU/: solz.sh
old/kz-mz-abc-1/STU/tasks/: README.MD
old/kz-mz-abc-1/STU/tasks/t1/: ans.md
old/kz-mz-abc-1/WOX/.opencode/: opencode.db-wal
wt/: lix.fish
(+113 files in other folders)
