[workspace]
members = [
    "programs/message_board",
]
resolver = "2"

[package]
name = "message_board"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "message_board"

[dependencies]
anchor-lang = "0.31.1"

[features]
idl-build = ["anchor-lang/idl-build"]

[profile.release]
overflow-checks = true
lto = "thin"
codegen-units = 1

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(feature, values("cpi", "default", "idl-build", "no-entrypoint", "no-idl", "no-log-ix-name", "custom-heap", "custom-panic", "anchor-debug"))'
] }